force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <description>Stores annual leave allocations and consumed quotas per employee.</description>
    <label>Leave Balance</label>
    <nameField>
        <displayFormat>LB-{00000}</displayFormat>
        <label>Balance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>