force-app/main/default/objects/Leave_Balance__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <description>Leave category quota type</description>
    <label>Leave Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casual Leave</fullName>
                <default>true</default>
                <label>Casual Leave</label>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Paid Leave</fullName>
            </value>
            <value>
                <fullName>Work From Home</fullName>
            </value>
            <value>
                <fullName>Loss Of Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>