force-app/main/default/objects/Leave_Balance__c/fields/Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days__c</fullName>
    <description>Remaining leave days in this annual quota</description>
    <formula>Total_Allocated__c - Used_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>