force-app/main/default/objects/Leave_Balance__c/fields/Total_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated__c</fullName>
    <defaultValue>12.0</defaultValue>
    <description>Total annual leaves allotted for this category</description>
    <label>Total Allocated</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>