force-app/main/default/objects/Leave_Balance__c/fields/Used_Days__c.field-meta.xml
<CustomField>
    <fullName>Used_Days__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Total days of approved leaves utilized to date</description>
    <label>Used Days</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>